--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -7,6 +7,16 @@
     display :flex;
     align-items: center;
     justify-content: space-between;
+    
+    
+    @media(max-width : 720px){
+    
+        &{
+            display:block;
+        
+        }
+    
+    }
 
 }
 
