--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -16,6 +16,8 @@
         nav {
             margin-left:5rem ;
             height :5rem ;
+            display:flex;
+            margin-left:10%;
 
                 a{
 
@@ -59,5 +61,6 @@
 
          button {
              margin-left :auto ;
+            font-size: 80%;
          }     
 }
