--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -22,6 +22,15 @@
 
 .hero{
     max-width: 600px;
+    
+    @media(max-width : 720px){
+    
+        &{
+            margin: 4rem;
+             width: 120px;
+        }
+    
+    }
 
     > span {
         font-size :1.5rem;
